--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "nodemon": "^2.0.0"
+  },
+
   "eslintConfig": {
     "extends": "react-app"
   },
