--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "login-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "bcrypt": "^4.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
-  },
+  "name": "mern",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
-
-  "proxy": "http://localhost:8080",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.0"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
   },
-
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "filepond": "^4.9.5",
+    "filepond-plugin-file-validate-type": "^1.2.4",
+    "firebase": "^6.3.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.8.10",
+    "node-gyp": "^6.1.0",
+    "nodejs": "0.0.0",
+    "react": "^16.12.0",
+    "react-image": "^2.2.2",
+    "react-remarkable": "^1.1.3"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/damonkd/Project-3.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/damonkd/Project-3/issues"
+  },
+  "homepage": "https://github.com/damonkd/Project-3#readme",
+  "description": ""
 }
